kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web-nginx
      labels:
        app: web
    spec:
      containers:
        - name: web-nginx
          image: gervladislav/education:v1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8000
          volumeMounts:
            - name: app
              mountPath: /app
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket: {port: 8000}      
      volumes:
        - name: app
          emptyDir: {}
