kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-nginx
  labels:
    app: web
spec:
  containers:
    - name: web-nginx
      image: gervladislav/education:v1
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 8000
      volumeMounts:
        - name: app
          mountPath: /app
      readinessProbe:
        httpGet:
          path: /index.html
          port: 80
      livenessProbe:
        tcpSocket: {port: 8000}      
  volumes:
    - name: app
      emptyDir: {}
